syntax = "proto3";

message Posts {
  int64 id = 1;
  string title = 2;
  string body = 3;
  string category = 4;
}

message PostsId {
  int64 id = 1;
}

message PostsList {
  repeated Posts posts = 1;
}

message Empty {}

service PostsService {
  rpc GetAllPosts (Empty) returns (PostsList) {}
  rpc GetPosts (PostsId) returns (Posts) {}
  rpc DeletePosts (PostsId) returns (Empty) {}
  rpc EditPosts (Posts) returns (Posts) {}
  rpc AddPosts (Posts) returns (Posts) {}
}

